updated app (Open Forum)

--- a/app/src/main/res/layout/activity_add_question.xml
+++ b/app/src/main/res/layout/activity_add_question.xml
@@ -8,41 +8,9 @@
     android:orientation="vertical"
     android:id="@+id/activity_add_question">
 
-    <androidx.appcompat.widget.Toolbar
-        android:id="@+id/toolbar"
-        android:fitsSystemWindows="true"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-        app:layout_scrollFlags="scroll|enterAlways|snap"
-        app:title=" ">
-
-        <ImageView
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:scaleType="centerCrop"
-            android:layout_weight="1"
-            android:background="@drawable/account"/>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:paddingLeft="25dp"
-            android:textColor="#FFFFFF"
-            android:text="Hi, Sagar"
-            android:textSize="28sp"
-            app:fontFamily="serif"></TextView>
-
-        <com.airbnb.lottie.LottieAnimationView
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:layout_marginStart="72dp"
-            android:scaleType="centerCrop"
-            app:lottie_rawRes="@raw/notification"
-            app:lottie_loop="true"
-            app:lottie_autoPlay="true" />
-
-    </androidx.appcompat.widget.Toolbar>
+<ScrollView
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
 <LinearLayout
     android:layout_width="match_parent"
@@ -51,48 +19,48 @@
     android:layout_margin="10dp"
     android:layout_marginRight="20dp"
     android:layout_marginEnd="20dp">
-    <RelativeLayout
-        android:id="@+id/relative_1"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+<!--    <RelativeLayout-->
+<!--        android:id="@+id/relative_1"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content">-->
 
-        <ImageView
-            android:id="@+id/profile"
-            android:layout_width="45dp"
-            android:layout_height="45dp"
-            android:adjustViewBounds="true"
-            android:contentDescription="@string/todo"
-            android:scaleType="fitCenter"
-            android:src="@mipmap/ic_launcher"
-            />
+<!--        <ImageView-->
+<!--            android:id="@+id/profile"-->
+<!--            android:layout_width="45dp"-->
+<!--            android:layout_height="45dp"-->
+<!--            android:adjustViewBounds="true"-->
+<!--            android:contentDescription="@string/todo"-->
+<!--            android:scaleType="fitCenter"-->
+<!--            android:src="@drawable/forun_user"-->
+<!--            />-->
 
-        <LinearLayout
-            android:id="@+id/name_info"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="10dp"
-            android:layout_toRightOf="@+id/profile"
-            android:orientation="vertical">
-
-
-            <TextView
-                android:id="@+id/name"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:fontFamily="sans-serif-medium"
-                android:text="@string/harshad"
-                android:textColor="@color/black"
-                android:textSize="13sp" />
+<!--        <LinearLayout-->
+<!--            android:id="@+id/name_info"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_centerVertical="true"-->
+<!--            android:layout_marginLeft="10dp"-->
+<!--            android:layout_toRightOf="@+id/profile"-->
+<!--            android:orientation="vertical">-->
 
 
-        </LinearLayout>
+<!--            <TextView-->
+<!--                android:id="@+id/name"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:fontFamily="sans-serif-medium"-->
+<!--                android:text="@string/harshad"-->
+<!--                android:textColor="@color/black"-->
+<!--                android:textSize="13sp" />-->
 
-    </RelativeLayout>
+
+<!--        </LinearLayout>-->
+
+<!--    </RelativeLayout>-->
     <LinearLayout
         android:id="@+id/que_and_ans"
         android:orientation="vertical"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/relative_1"
         android:layout_marginTop="8dp">
@@ -100,8 +68,7 @@
         <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Start your question with 'What','How',
-            'why',etc."
+            android:hint="Add Your Question"
             android:textColorLink="#00090808"
             android:importantForAutofill="no"
             android:autofillHints=""
@@ -109,43 +76,56 @@
             ></EditText>
 
     </LinearLayout>
+<!--    <LinearLayout-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:orientation="horizontal"-->
+<!--        >-->
+<!--        <EditText-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:id="@+id/tag1"-->
+<!--            android:hint="Tag1"></EditText>-->
+<!--        <EditText-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:id="@+id/tag2"-->
+<!--            android:hint="Tag2"></EditText>-->
+<!--        <EditText-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:id="@+id/tag3"-->
+<!--            android:hint="Tag3"></EditText>-->
+
+<!--    </LinearLayout>-->
+
     <LinearLayout
-        android:layout_height="wrap_content"
         android:layout_width="match_parent"
-        android:orientation="horizontal"
-        >
-        <EditText
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/tag1"
-            android:hint="Tag1"></EditText>
-        <EditText
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/tag2"
-            android:hint="Tag2"></EditText>
-        <EditText
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/tag3"
-            android:hint="Tag3"></EditText>
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/que_and_ans"
+        android:orientation="vertical"
         >
+        <Button
+            android:id="@+id/choosed"
+            android:layout_width="50dp"
+            android:layout_height="wrap_content"
+            android:background="@drawable/ic_image_choose"></Button>
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/choosedImage"
+            android:visibility="gone"></ImageView>
 
         <Button
             android:id="@+id/add_que"
             style="@style/Widget.AppCompat.Button.Small"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:hint="@string/add"
             ></Button>
     </LinearLayout>
 </LinearLayout>
-
+</ScrollView>
 </LinearLayout>
