--- a/app/src/main/res/layout/activity_forum.xml
+++ b/app/src/main/res/layout/activity_forum.xml
@@ -25,16 +25,16 @@
         android:layout_marginEnd="0dp"
         android:layout_marginRight="0dp" />
 
-    <com.google.android.material.bottomnavigation.BottomNavigationView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/bottom_nav"
-        app:backgroundTint="@color/white"
-        app:itemTextColor="@drawable/selector"
-        app:itemIconTint="@drawable/selector"
-        app:menu="@menu/menu_nav"
-        android:layout_alignParentBottom="true">
-    </com.google.android.material.bottomnavigation.BottomNavigationView>
+<!--    <com.google.android.material.bottomnavigation.BottomNavigationView-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:id="@+id/bottom_nav"-->
+<!--        app:backgroundTint="@color/white"-->
+<!--        app:itemTextColor="@drawable/selector"-->
+<!--        app:itemIconTint="@drawable/selector"-->
+<!--        app:menu="@menu/menu_nav"-->
+<!--        android:layout_alignParentBottom="true">-->
+<!--    </com.google.android.material.bottomnavigation.BottomNavigationView>-->
 
     <ProgressBar
         android:id="@+id/progressBarMain1"
@@ -55,6 +55,21 @@
         android:layout_marginBottom="294dp"
         android:outlineSpotShadowColor="@color/black"
         android:visibility="gone" />
+
+    <ImageView
+        android:id="@+id/error"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="143dp"
+        android:layout_marginTop="239dp"
+        android:layout_marginEnd="142dp"
+        android:layout_marginBottom="380dp"
+        android:src="@drawable/finalkalyan"
+        android:visibility="gone"></ImageView>
 
 
 </RelativeLayout>
