--- a/app/src/main/res/layout/activity_education.xml
+++ b/app/src/main/res/layout/activity_education.xml
@@ -46,6 +46,8 @@
                 android:layout_marginBottom="5dp"
                 android:layout_weight="4"
                 android:background="@drawable/cborder"
+                android:textColor="@color/bg"
+                android:fontFamily="serif"
                 android:text="My Scheme"/>
 
 
