--- a/app/src/main/res/layout/education_feed.xml
+++ b/app/src/main/res/layout/education_feed.xml
@@ -7,20 +7,36 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_margin="8dp"
+        android:orientation="horizontal"
+        android:weightSum="5"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
+        android:padding="5dp"
         >
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="scheme"
             android:id="@+id/Eduscheme"
-            android:textSize="15dp"
+            android:layout_weight="1"
+            android:padding="7dp"
+            android:textSize="16sp"
             android:textColor="#000000"
+            android:background="@drawable/rectangle"
             android:textStyle="normal"
             android:fontFamily="serif">
 
         </TextView>
+
+
+
+
+
+
+
+
 
 
     </LinearLayout>
