modified activity_irrigation.xml and irrigation.java

--- a/app/src/main/res/layout/activity_irrigation.xml
+++ b/app/src/main/res/layout/activity_irrigation.xml
@@ -42,7 +42,7 @@
                         android:layout_height="wrap_content"
                         android:layout_centerHorizontal="true"
                         android:layout_marginTop="40dp"
-                        android:text="30 Degree"
+                        android:hint="value"
                         android:fontFamily="serif"
                         android:textColor="#2F363F"
                         android:textSize="15sp"
@@ -81,7 +81,7 @@
                         android:layout_height="wrap_content"
                         android:layout_centerHorizontal="true"
                         android:layout_marginTop="40dp"
-                        android:text="140"
+                        android:hint="value"
                         android:fontFamily="serif"
                         android:textColor="#2F363F"
                         android:textSize="15sp"
