--- a/app/src/main/res/layout/activity_education_perticular_scheme.xml
+++ b/app/src/main/res/layout/activity_education_perticular_scheme.xml
@@ -1,19 +1,61 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".EducationPerticularScheme">
+    tools:context=".EducationPerticularScheme"
+    android:background="@drawable/new3">
+
+    <androidx.appcompat.widget.Toolbar
+        android:layout_width="match_parent"
+        android:layout_height="58dp"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+        app:layout_scrollFlags="scroll|enterAlways|snap">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal"
+            android:weightSum="5">
+
+
+            <TextView
+                android:id="@+id/searchView"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="5dp"
+                android:layout_marginTop="5dp"
+                android:layout_marginEnd="10dp"
+                android:layout_marginBottom="5dp"
+                android:text="किसान योजना"
+                android:gravity="center"
+                android:textSize="30sp"
+                android:fontFamily="serif"
+                android:textColor="#FFFFFF"/>
+
+
+
+
+        </LinearLayout>
+
+
+
+    </androidx.appcompat.widget.Toolbar>
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_marginTop="58dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="40dp"
+        android:background="@drawable/rectangle">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-
+            android:orientation="vertical"
             android:layout_marginLeft="15dp"
             android:layout_marginRight="15dp"
             >
@@ -28,32 +70,12 @@
                 android:textColor="#000000"
                 android:textSize="20dp"
                 android:textStyle="bold"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
+                android:layout_margin="10dp"
                 android:fontFamily="serif"/>
 
-            <TextView
-                android:id="@+id/perticularSchemeDept"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:text="Agriculture Department"
-                android:textColor="#000000"
-                android:textSize="12dp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="1.0"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/perticularSchemeName"
-                android:fontFamily="serif"/>
 
-            <View
-                android:layout_width="372dp"
-                android:layout_height="2dp"
-                android:background="@android:color/darker_gray"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/perticularSchemeDept" />
+
+
 
             <TextView
                 android:id="@+id/perticularSchemeOverview"
@@ -63,56 +85,48 @@
                 android:text=" Scheme overview"
                 android:textColor="#000000"
                 android:textSize="15dp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/perticularSchemeDept"
+                android:layout_margin="15dp"
                 android:fontFamily="serif"/>
+
+
 
             <TextView
                 android:id="@+id/benefit"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
+                android:layout_marginTop="5dp"
+                android:layout_marginBottom="5dp"
                 android:gravity="center"
-                android:text="Eligibility"
-                android:textColor="#000000"
-                android:textSize="15dp"
+                android:text="पात्रता"
+                android:textColor="@color/bg"
+                android:textSize="20sp"
                 android:textStyle="bold"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/perticularSchemeOverview"
                 android:fontFamily="serif"/>
 
+
+
             <TextView
-                android:id="@+id/perticularSchemebenefit"
+                android:id="@+id/eligible"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text=" Scheme Benefit"
+                android:text="Documents"
                 android:textColor="#000000"
                 android:textSize="15dp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/benefit"
+                android:layout_margin="15dp"
                 android:fontFamily="serif"/>
+
+
 
             <TextView
                 android:id="@+id/Doc"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
+                android:layout_margin="5dp"
                 android:gravity="center"
-                android:text="Documents Required"
-                android:textColor="#000000"
-                android:textSize="15dp"
-                android:textStyle="bold"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/perticularSchemebenefit"
-                android:fontFamily="serif"/>
+                android:text="आवश्यक कागदपत्रे"
+                android:textColor="@color/bg"
+                android:textSize="20sp"
+                android:textStyle="bold"/>
 
             <TextView
                 android:id="@+id/perticularSchemeDoc"
@@ -121,28 +135,24 @@
                 android:text="Documents"
                 android:textColor="#000000"
                 android:textSize="15dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/Doc"
-                app:layout_constraintVertical_bias="0.0"
+                android:layout_margin="15dp"
                 android:fontFamily="serif"/>
 
             <Button
                 android:layout_width="wrap_content"
                 android:id="@+id/link"
                 android:layout_height="wrap_content"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                android:text="Apply"
-                app:layout_constraintTop_toBottomOf="@+id/perticularSchemeDoc"
-                app:layout_constraintVertical_bias="0.046"
-                android:background="@drawable/cborder"
+                android:layout_margin="20dp"
+                android:gravity="center"
+                android:layout_gravity="center"
+                android:text="अर्ज करा"
+                android:textColor="@color/bg"
+                android:textSize="25sp"
+                android:padding="10dp"
+                 android:background="@drawable/cborder"
                 android:layout_marginBottom="15dp"
                 ></Button>
-        </androidx.constraintlayout.widget.ConstraintLayout>
+        </LinearLayout>
 
     </ScrollView>
-</androidx.constraintlayout.widget.ConstraintLayout>
+</RelativeLayout>
