--- a/app/src/main/res/layout/education_feed.xml
+++ b/app/src/main/res/layout/education_feed.xml
@@ -9,10 +9,10 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:weightSum="5"
-        android:layout_marginStart="10dp"
-        android:layout_marginEnd="10dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="10dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginEnd="5dp"
+        android:layout_marginTop="2dp"
+        android:layout_marginBottom="2dp"
         android:padding="5dp"
         >
         <TextView
@@ -23,7 +23,7 @@
             android:layout_weight="1"
             android:padding="7dp"
             android:textSize="16sp"
-            android:textColor="#000000"
+            android:textColor="@color/bg"
             android:background="@drawable/rectangle"
             android:textStyle="normal"
             android:fontFamily="serif">
