rent service updated in sell and buy

--- a/app/src/main/res/menu/bottomnav.xml
+++ b/app/src/main/res/menu/bottomnav.xml
@@ -15,9 +15,9 @@
 
 
     <item
-        android:id="@+id/profile"
-        android:title="Profile"
-        android:icon="@drawable/account"/>
+        android:id="@+id/rent"
+        android:title="On Rent"
+        android:icon="@drawable/rent"/>
 
 
 
