rent ui updated

--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -22,6 +22,7 @@
                 app:layout_constraintTop_toTopOf="parent" >
 
                 <ImageView
+                    android:id="@+id/myprofile"
                     android:layout_width="50dp"
                     android:layout_height="50dp"
                     android:layout_weight="1"
