--- a/app/src/main/res/layout/activity_images.xml
+++ b/app/src/main/res/layout/activity_images.xml
@@ -45,10 +45,82 @@
     </androidx.appcompat.widget.Toolbar>
 
 
+    <View
+        android:layout_height="2dp"
+        android:layout_width="match_parent"
+        android:layout_marginTop="58dp"
+        android:background="#c0c0c0"/>
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:layout_marginTop="58dp"
+        android:orientation="horizontal"
+        android:weightSum="4">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:textSize="18sp"
+            android:textColor="#000000"
+            android:fontFamily="serif"
+            android:gravity="center"
+            android:text="Sort By"/>
+
+
+        <View
+            android:layout_width="2dp"
+            android:layout_height="50dp"
+            android:background="#c0c0c0"/>
+
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:textSize="16sp"
+            android:gravity="center"
+            android:textColor="#000000"
+            android:layout_margin="5dp"
+            android:fontFamily="serif"
+            android:text="Location"/>
+
+        <View
+            android:layout_width="2dp"
+            android:layout_height="50dp"
+            android:background="#c0c0c0"/>
+
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:textSize="16sp"
+            android:textColor="#000000"
+            android:gravity="center"
+            android:fontFamily="serif"
+            android:text="Category "/>
+
+
+
+        <Spinner
+            android:id="@+id/drop"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:textSize="18sp"
+            android:fontFamily="serif"
+            />
+
+
+    </LinearLayout>
+
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="58dp"
+        android:layout_marginTop="98dp"
         android:layout_marginBottom="58dp">
 
 
