--- a/app/src/main/res/layout/activity_camera.xml
+++ b/app/src/main/res/layout/activity_camera.xml
@@ -3,24 +3,39 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:background="@drawable/new3"
     android:layout_height="match_parent"
     tools:context=".CameraActivity">
+
     <com.wonderkiln.camerakit.CameraView
         android:id="@+id/activity_camera_camera_view"
         android:layout_width="match_parent"
-        android:layout_height="370dp"
-        android:layout_alignParentTop="true">
-    </com.wonderkiln.camerakit.CameraView>
-    <Button
-        android:id="@+id/activity_camera_button_flash"
-        android:padding="5dp"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:layout_alignParentLeft="true"
+        android:layout_height="607dp"
         android:layout_alignParentTop="true"
-        android:layout_margin="15dp"
-        android:background="@drawable/icon_flash_off"/>
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="0dp">
+
+
+
+    </com.wonderkiln.camerakit.CameraView>
+    <ProgressBar
+        android:id="@+id/progressBar2"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="185dp"
+        android:layout_marginTop="300dp"
+        android:layout_marginEnd="160dp"
+        android:layout_marginBottom="683dp"
+        android:visibility="gone"/>
+    <!--    <Button-->
+<!--        android:id="@+id/activity_camera_button_flash"-->
+<!--        android:padding="5dp"-->
+<!--        android:layout_width="30dp"-->
+<!--        android:layout_height="30dp"-->
+<!--        android:layout_alignParentLeft="true"-->
+<!--        android:layout_alignParentTop="true"-->
+<!--        android:layout_margin="15dp"-->
+<!--        android:background="@drawable/icon_flash_off"/>-->
     <Button
         android:id="@+id/activity_camera_button_close"
         android:padding="5dp"
@@ -31,60 +46,18 @@
         android:layout_margin="15dp"
         android:background="@drawable/ic_close_white_24dp"/>
     <LinearLayout
-        android:layout_marginTop="350dp"
+        android:id="@+id/packet"
+        android:layout_marginTop="600dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:weightSum="7">
-        <androidx.cardview.widget.CardView
-            android:visibility="visible"
-            app:cardCornerRadius="20dp"
-            app:cardElevation="0dp"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="5">
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:orientation="vertical"
-                android:layout_height="match_parent">
-                <LinearLayout
-                    android:layout_margin="10dp"
-                    android:layout_width="match_parent"
-                    android:gravity="center"
-                    android:orientation="horizontal"
-                    android:layout_height="0dp"
-                    android:layout_weight="2">
-                    <ImageView
-                        android:id="@+id/activity_camera_image_view"
-                        android:src="@drawable/icon_image"
-                        android:layout_width="60dp"
-                        android:scaleType="centerCrop"
-                        android:layout_height="60dp" />
-                    <TextView
-                        android:textColor="@color/colorAccent"
-                        android:id="@+id/activity_camera_text_view_detect"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:gravity="center"
-                        android:maxLines="1"
-                        android:ellipsize="end"
-                        android:text="Take a Picture"
-                        android:layout_marginHorizontal="10dp"
-                        android:textSize="25dp"/>
-                </LinearLayout>
-                <ListView
-                    android:id="@+id/activity_camera_list_view"
-                    android:layout_width="match_parent"
-                    android:layout_weight="3"
-                    android:layout_height="0dp">
-                </ListView>
-            </LinearLayout>
-        </androidx.cardview.widget.CardView>
+        android:orientation="vertical">
+
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="2"
-            android:background="@color/colorPrimary">
+            android:background="@color/colorPrimary"
+            >
             <Button
                 android:visibility="visible"
                 android:id="@+id/activity_camera_button_click"
