--- a/app/src/main/res/layout/activity_images.xml
+++ b/app/src/main/res/layout/activity_images.xml
@@ -85,7 +85,7 @@
             android:textColor="#000000"
             android:layout_margin="5dp"
             android:fontFamily="serif"
-            android:text="Location"/>
+            android:text="Price"/>
 
         <View
             android:layout_width="2dp"
